--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -73,7 +73,6 @@
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   background-size: cover;
-  // overflow: hidden;
   border-bottom: 0.5em solid white;
   display: grid;
   justify-content: center;
@@ -86,12 +85,11 @@
   p {
     margin-top: 0;
     color: white;
-    max-width: 1200px;
     text-align: center;
-  }
-  a {
-    color: white;
-    font-weight: 700;
+    a {
+      color: white;
+      font-weight: 700;
+    }
   }
 }
 
